Cleaned source code

--- a/notebook/ETL Pipeline Preparation.ipynb
+++ b/notebook/ETL Pipeline Preparation.ipynb
@@ -1491,7 +1491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1507,17 +1507,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "engine = create_engine('sqlite:///InsertDatabaseName.db')\n",
-    "df.to_sql('InsertTableName', engine, index=False)"
+    "# engine = create_engine('sqlite:///InsertDatabaseName.db')\n",
+    "# df.to_sql('InsertTableName', engine, index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
