--- a/notebook/ML Pipeline Preparation.ipynb
+++ b/notebook/ML Pipeline Preparation.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,14 +42,38 @@
     "from sklearn.naive_bayes import GaussianNB\n",
     "from sklearn.metrics import accuracy_score\n",
     "from sklearn.base import BaseEstimator, TransformerMixin\n",
-    "from sklearn.metrics import classification_report"
+    "from sklearn.metrics import classification_report\n",
+    "import pickle"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package stopwords to /home/sajith/nltk_data...\n",
+      "[nltk_data]   Package stopwords is already up-to-date!\n",
+      "[nltk_data] Downloading package wordnet to /home/sajith/nltk_data...\n",
+      "[nltk_data]   Package wordnet is already up-to-date!\n",
+      "[nltk_data] Downloading package punkt to /home/sajith/nltk_data...\n",
+      "[nltk_data]   Package punkt is already up-to-date!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "nltk.download('stopwords')\n",
     "nltk.download('wordnet')\n",
@@ -58,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,13 +96,71 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "id                         True\n",
+       "message                   False\n",
+       "original                   True\n",
+       "genre                     False\n",
+       "related                    True\n",
+       "request                   False\n",
+       "offer                     False\n",
+       "aid_related               False\n",
+       "medical_help              False\n",
+       "medical_products          False\n",
+       "search_and_rescue         False\n",
+       "security                  False\n",
+       "military                  False\n",
+       "child_alone               False\n",
+       "water                     False\n",
+       "food                      False\n",
+       "shelter                   False\n",
+       "clothing                  False\n",
+       "money                     False\n",
+       "missing_people            False\n",
+       "refugees                  False\n",
+       "death                     False\n",
+       "other_aid                 False\n",
+       "infrastructure_related    False\n",
+       "transport                 False\n",
+       "buildings                 False\n",
+       "electricity               False\n",
+       "tools                     False\n",
+       "hospitals                 False\n",
+       "shops                     False\n",
+       "aid_centers               False\n",
+       "other_infrastructure      False\n",
+       "weather_related           False\n",
+       "floods                    False\n",
+       "storm                     False\n",
+       "fire                      False\n",
+       "earthquake                False\n",
+       "cold                      False\n",
+       "other_weather             False\n",
+       "direct_report             False\n",
+       "dtype: bool"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df.isna().any()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,16 +169,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "id                         True\n",
+       "message                   False\n",
+       "original                   True\n",
+       "genre                     False\n",
+       "related                   False\n",
+       "request                   False\n",
+       "offer                     False\n",
+       "aid_related               False\n",
+       "medical_help              False\n",
+       "medical_products          False\n",
+       "search_and_rescue         False\n",
+       "security                  False\n",
+       "military                  False\n",
+       "child_alone               False\n",
+       "water                     False\n",
+       "food                      False\n",
+       "shelter                   False\n",
+       "clothing                  False\n",
+       "money                     False\n",
+       "missing_people            False\n",
+       "refugees                  False\n",
+       "death                     False\n",
+       "other_aid                 False\n",
+       "infrastructure_related    False\n",
+       "transport                 False\n",
+       "buildings                 False\n",
+       "electricity               False\n",
+       "tools                     False\n",
+       "hospitals                 False\n",
+       "shops                     False\n",
+       "aid_centers               False\n",
+       "other_infrastructure      False\n",
+       "weather_related           False\n",
+       "floods                    False\n",
+       "storm                     False\n",
+       "fire                      False\n",
+       "earthquake                False\n",
+       "cold                      False\n",
+       "other_weather             False\n",
+       "direct_report             False\n",
+       "dtype: bool"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df.isna().any()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -108,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,12 +420,170 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "estimator = MultiOutputClassifier(OneVsRestClassifier(RandomForestClassifier(n_jobs = 5)))\n",
     "pipeline = build_pipeline(estimator)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/sajith/Documents/Acedamic/Projects/Analytics/DRPipeline/disaster-response-pipeline/lib/python3.6/site-packages/sklearn/multiclass.py:75: UserWarning: Label not 0.0 is present in all training examples.\n",
+      "  str(classes[c]))\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Pipeline(memory=None,\n",
+       "         steps=[('features',\n",
+       "                 FeatureUnion(n_jobs=None,\n",
+       "                              transformer_list=[('text_pipeline',\n",
+       "                                                 Pipeline(memory=None,\n",
+       "                                                          steps=[('vect',\n",
+       "                                                                  CountVectorizer(analyzer='word',\n",
+       "                                                                                  binary=False,\n",
+       "                                                                                  decode_error='strict',\n",
+       "                                                                                  dtype=<class 'numpy.int64'>,\n",
+       "                                                                                  encoding='utf-8',\n",
+       "                                                                                  input='content',\n",
+       "                                                                                  lowercase=True,\n",
+       "                                                                                  max_df=1.0,\n",
+       "                                                                                  max_features=None,\n",
+       "                                                                                  min_df=1,\n",
+       "                                                                                  ngram_range=(1,\n",
+       "                                                                                               1),\n",
+       "                                                                                  preprocessor=Non...\n",
+       "                                                                                                      class_weight=None,\n",
+       "                                                                                                      criterion='gini',\n",
+       "                                                                                                      max_depth=None,\n",
+       "                                                                                                      max_features='auto',\n",
+       "                                                                                                      max_leaf_nodes=None,\n",
+       "                                                                                                      max_samples=None,\n",
+       "                                                                                                      min_impurity_decrease=0.0,\n",
+       "                                                                                                      min_impurity_split=None,\n",
+       "                                                                                                      min_samples_leaf=1,\n",
+       "                                                                                                      min_samples_split=2,\n",
+       "                                                                                                      min_weight_fraction_leaf=0.0,\n",
+       "                                                                                                      n_estimators=100,\n",
+       "                                                                                                      n_jobs=5,\n",
+       "                                                                                                      oob_score=False,\n",
+       "                                                                                                      random_state=None,\n",
+       "                                                                                                      verbose=0,\n",
+       "                                                                                                      warm_start=False),\n",
+       "                                                                     n_jobs=None),\n",
+       "                                       n_jobs=None))],\n",
+       "         verbose=False)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pipeline.fit(X_train, Y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prediction = pipeline.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                        precision    recall  f1-score   support\n",
+      "\n",
+      "               related       0.81      0.97      0.88      3983\n",
+      "               request       0.90      0.44      0.59       931\n",
+      "                 offer       0.00      0.00      0.00        20\n",
+      "           aid_related       0.80      0.61      0.69      2226\n",
+      "          medical_help       0.70      0.04      0.07       447\n",
+      "      medical_products       0.70      0.07      0.12       284\n",
+      "     search_and_rescue       0.69      0.06      0.12       170\n",
+      "              security       1.00      0.01      0.02       104\n",
+      "              military       0.78      0.04      0.07       189\n",
+      "           child_alone       0.00      0.00      0.00         0\n",
+      "                 water       0.92      0.19      0.31       371\n",
+      "                  food       0.86      0.41      0.55       597\n",
+      "               shelter       0.86      0.31      0.45       477\n",
+      "              clothing       0.67      0.05      0.10        77\n",
+      "                 money       0.75      0.03      0.05       112\n",
+      "        missing_people       0.00      0.00      0.00        68\n",
+      "              refugees       0.00      0.00      0.00       167\n",
+      "                 death       0.89      0.13      0.22       245\n",
+      "             other_aid       0.72      0.02      0.04       715\n",
+      "infrastructure_related       0.00      0.00      0.00       343\n",
+      "             transport       0.70      0.06      0.12       247\n",
+      "             buildings       0.91      0.08      0.15       258\n",
+      "           electricity       1.00      0.02      0.04       103\n",
+      "                 tools       0.00      0.00      0.00        36\n",
+      "             hospitals       0.00      0.00      0.00        57\n",
+      "                 shops       0.00      0.00      0.00        18\n",
+      "           aid_centers       0.00      0.00      0.00        67\n",
+      "  other_infrastructure       0.00      0.00      0.00       229\n",
+      "       weather_related       0.88      0.60      0.71      1489\n",
+      "                floods       0.98      0.32      0.48       434\n",
+      "                 storm       0.78      0.40      0.53       505\n",
+      "                  fire       1.00      0.02      0.04        56\n",
+      "            earthquake       0.91      0.72      0.80       509\n",
+      "                  cold       0.80      0.07      0.14       107\n",
+      "         other_weather       0.60      0.01      0.02       277\n",
+      "         direct_report       0.88      0.37      0.52      1029\n",
+      "\n",
+      "             micro avg       0.83      0.48      0.61     16947\n",
+      "             macro avg       0.60      0.17      0.22     16947\n",
+      "          weighted avg       0.78      0.48      0.53     16947\n",
+      "           samples avg       0.70      0.46      0.51     16947\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/sajith/Documents/Acedamic/Projects/Analytics/DRPipeline/disaster-response-pipeline/lib/python3.6/site-packages/sklearn/metrics/_classification.py:1272: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "/home/sajith/Documents/Acedamic/Projects/Analytics/DRPipeline/disaster-response-pipeline/lib/python3.6/site-packages/sklearn/metrics/_classification.py:1272: UndefinedMetricWarning: Recall and F-score are ill-defined and being set to 0.0 in labels with no true samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "/home/sajith/Documents/Acedamic/Projects/Analytics/DRPipeline/disaster-response-pipeline/lib/python3.6/site-packages/sklearn/metrics/_classification.py:1272: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in samples with no predicted labels. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "/home/sajith/Documents/Acedamic/Projects/Analytics/DRPipeline/disaster-response-pipeline/lib/python3.6/site-packages/sklearn/metrics/_classification.py:1272: UndefinedMetricWarning: Recall and F-score are ill-defined and being set to 0.0 in samples with no true labels. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(classification_report(Y_test, prediction, target_names=Y.columns.values))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pickle.dump(pipeline, open('classifier.pkl', 'wb'))"
    ]
   },
   {
