Cleaned source code and improved

--- a/notebook/ETL Pipeline Preparation.ipynb
+++ b/notebook/ETL Pipeline Preparation.ipynb
@@ -1511,8 +1511,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# engine = create_engine('sqlite:///InsertDatabaseName.db')\n",
-    "# df.to_sql('InsertTableName', engine, index=False)"
+    "engine = create_engine('sqlite:///InsertDatabaseName.db')\n",
+    "df.to_sql('InsertTableName', engine, index=False)"
    ]
   },
   {
@@ -1521,7 +1521,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('data.csv')"
+    "# df.to_csv('data.csv')"
    ]
   },
   {
